adding more styling and images

--- a/index.html
+++ b/index.html
@@ -6,10 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Glass Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 </head>
 <body>
     <main>
-            <section class="glass"></section>
+            <section class="glass">
+                <div class="dashboard">
+                    <div class="user">
+                        <img src="images/me.jpg" alt="me">
+                        <h3>Tadas Zvinklys</h3>
+                        <p>Pro Member</p>
+                    </div>
+                    <div class="links">
+                        <div class="link">
+                            <img src="images/cool.svg" alt="">
+                            <h2>About</h2>
+                        </div>
+                        <div class="link">
+                            <img src="images/fan.svg" alt="">
+                            <h2>Projects</h2>
+                        </div>
+                        <div class="link">
+                            <img src="images/swimming.svg" alt="">
+                            <h2>Activities</h2>
+                        </div>
+                        <div class="link">
+                            <img src="images/smartphone.svg" alt="">
+                            <h2>Contact</h2>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="info">
+                    <div class="name">
+                        <h1>Projects</h1>
+                    </div>
+                    <div class="cards">
+                        <div class="card">
+                            <img src="images/maze.png" alt="maze">
+                            <h3>Maze</h3>
+                            <p>HTML, JavaScript, MatterJS</p>
+                        </div>
+                        <div class="card">
+                            <img src="images/mars.png" alt="">
+                            <h3>Mars Rovers</h3>
+                            <p>HTML, CSS, JavaScript, React, Node.js, Nasa API</p>
+                        </div>
+                        <div class="card">
+                            <img src="images/moviefight.png" alt="">
+                            <h3>Movie Fights</h3>
+                            <p>HTML, CSS, JavaScript, IMDB API</p>
+                        </div>
+                        <div class="card">
+                            <img src="images/myselfcss.png" alt="">
+                            <h3>Myself CSS</h3>
+                            <p>CSS</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
     </main>
     <div class="circle1"></div>
     <div class="circle2"></div>
