adding more styling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Glass Website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -14,24 +14,23 @@
                 <div class="dashboard">
                     <div class="user">
                         <img src="images/me.jpg" alt="me">
-                        <h3>Tadas Zvinklys</h3>
-                        <p>Pro Member</p>
+                        <h1>Tadas Zvinklys</h1>
                     </div>
                     <div class="links">
                         <div class="link">
-                            <img src="images/cool.svg" alt="">
+                            <img src="images/cool.svg" alt="about">
                             <h2>About</h2>
                         </div>
                         <div class="link">
-                            <img src="images/fan.svg" alt="">
+                            <img src="images/fan.svg" alt="projects">
                             <h2>Projects</h2>
                         </div>
                         <div class="link">
-                            <img src="images/swimming.svg" alt="">
+                            <img src="images/swimming.svg" alt="activities">
                             <h2>Activities</h2>
                         </div>
                         <div class="link">
-                            <img src="images/smartphone.svg" alt="">
+                            <img src="images/smartphone.svg" alt="contact">
                             <h2>Contact</h2>
                         </div>
                     </div>
