adding more style

--- a/index.html
+++ b/index.html
@@ -40,27 +40,40 @@
                     <div class="name">
                         <h1>Projects</h1>
                     </div>
+
                     <div class="cards">
                         <div class="card">
                             <img src="images/maze.png" alt="maze">
                             <h3>Maze</h3>
-                            <p>HTML, JavaScript, MatterJS</p>
+                            <div class="card-info">
+                                <p>HTML, JavaScript, MatterJS</p>
+                            </div>
                         </div>
+
                         <div class="card">
                             <img src="images/mars.png" alt="">
                             <h3>Mars Rovers</h3>
-                            <p>HTML, CSS, JavaScript, React, Node.js, Nasa API</p>
+                            <div class="card-info">
+                                <p>HTML, CSS, JavaScript, React, Node.js, Nasa API</p>
+                            </div>
                         </div>
+
                         <div class="card">
                             <img src="images/moviefight.png" alt="">
                             <h3>Movie Fights</h3>
-                            <p>HTML, CSS, JavaScript, IMDB API</p>
+                            <div class="card-info">
+                                <p>HTML, CSS, JavaScript, IMDB API</p>
+                            </div>
                         </div>
+
                         <div class="card">
                             <img src="images/myselfcss.png" alt="">
                             <h3>Myself CSS</h3>
-                            <p>CSS</p>
+                            <div class="card-info">
+                                <p>CSS</p>
+                            </div>
                         </div>
+                        
                     </div>
                 </div>
             </section>
